syntax = "proto3";

package microservices.followships;

option go_package = "microservices/followships/cmd/server/grpc/api/proto/generated";

message PaginationArgs {
  uint64 offset    = 1;
  uint64 page_size = 2;
}
